projects/maison/src/apps/actual-budget/actual-budget.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget-websecure
  namespace: actual-budget
spec:
  parentRefs:
    - name: default
      namespace: default
  hostnames:
    - budget.chezmoi.sh
  rules:
    - backendRefs:
        - name: actual-budget
          port: 80
