projects/maison/src/apps/actual-budget/actual-budget.vpn.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget-tailscale
  namespace: actual-budget
spec:
  defaultBackend:
    service:
      name: actual-budget
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - actual-budget
